<resources>
    <string name="app_name">Mailchat</string>
    <string name="title_activity_start">start</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_security">SECURITY CODE</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_loader">LoaderActivity</string>
    <string name="terms">By clicking "Continue", you agree to the <font fgcolor="#000"><u>Terms</u></font> and <u>Privacy Policy</u></string>

    <string name="title_activity_log_in">LogIn</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_security_log_in">SecurityLogInActivity</string>
    <string name="title_activity_failed_connection">FailedConnection</string>
    <string name="title_activity_sign_up_business">SignUpBusiness</string>
    <string name="title_activity_security_code_business">SecurityCodeBusiness</string>
    <string name="title_activity_add_new_company">AddNewCompany</string>
    <string name="title_activity_add_user">AddUser</string>
    <string name="title_activity_company_profile">CompanyProfile</string>
    <string name="title_activity_add_user2">ADD USERS</string>

    <array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>
    <array name="city">
        <item>Moscow</item>
        <item>St.Petersburg</item>
        <item>Voronej</item>
    </array>
    <array name="nums_spinner">
        <item>+7</item>
        <item>+1</item>
        <item>+1</item>
    </array>
    <array name="category">
        <item>IT</item>
        <item>Audit</item>
        <item>Other Services</item>
        <item>Audit</item>
        <item>Banking</item>
        <item>Volunteering</item>
        <item>Development</item>
        <item>Design</item>
        <item>Client Service</item>
        <item>Consulting</item>
        <item>Cosmetics</item>
        <item>Media</item>
        <item>Medicine</item>
        <item>Education</item>


    </array>


    <string name="title_activity_add_private_user_photo">AddPrivateUserPhoto</string>
    <string name="title_activity_choose_private_mailchat_id">CHOOSE MAILCHAT ID</string>
    <string name="title_activity_choose_business_id">ChooseBusinessID</string>
    <string name="title_activity_congratulation_business">CongratulationBusiness</string>
    <string name="title_activity_add_representative_user">AddRepresentativeUser</string>
    <string name="title_activity_representative_added">RepresentativeAdded</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tst">tst</string>
    <string name="title_activity_reservation">Reservation</string>
    <string name="how_works"><u>how it works</u>?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_underline"><u>Log In</u></string>
    <string name="first_name_tv">First name</string>
    <string name="last_name_tv">Last name</string>
    <string name="phone_number_tv">Telephone number</string>
    <string name="skip_it"><u>Skip it</u></string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="trouble_login"><u>Trouble loging in?</u></string>
    <string name="learn_mor"><u>Learn more about accounts</u></string>
    <string name="category_string">Category</string>
    <string name="compan_name">Comany name</string>
    <string name="city_string">City</string>
    <string name="mailchatlinks_string">#Mailchat links</string>
    <string name="example_links">for example: #best_cakes</string>
    <string name="add_at_least_3_links_string">Add at lesat 3 links</string>
    <string name="next_btn_string">Next</string>
    <string name="add_profile_photo_title">ADD A PROFILE PHOTO</string>
    <string name="choose_photo_btn">Choose a photo</string>
    <string name="finish_btn">Finish</string>
    <string name="chooose_mailchat_id_title">CHOOSE MAILCHAT ID</string>
    <string name="company_name_lowercase">company name</string>
    <string name="our_recomendation_string">our recomendation:</string>
    <string name="choose_mailchatid_once">Please note, you can choose Mailchat ID just once</string>
    <string name="confirm_btn_string">Confirm</string>
    <string name="user_name_string">user name</string>
    <string name="company_profile_title">COMPANY PROFILE</string>
    <string name="web_site_string">Web site</string>
    <string name="address_string">Address</string>
    <string name="work_hours_string">Work hours</string>
    <string name="about_company_string">About company</string>
    <string name="finish_later">i want finish later</string>
    <string name="company_created">company created</string>
    <string name="fill_details_about_company">Please , fill profile company, clients want to know more details about your company</string>
    <string name="ok_btn_string">Ok</string>
    <string name="login_title">LOG IN</string>
    <string name="create_private_acc_title">CREATE A PRIVATE ACCOUNT</string>
    <string name="account_owner">Account owner</string>
    <string name="confidentional">(confidentional)</string>
    <string name="already_have_an_acc_string">Already have an account?</string>
    <string name="continue_string">Continue</string>
    <string name="user_profile_title">USER PROFILE</string>
    <string name="gender_srtring">GENDER</string>
    <string name="male_string">Male</string>
    <string name="female_string">Female</string>
    <string name="date_of_birth_string">Date of birth</string>
    <string name="mailchat_title">MAILCHAT</string>
    <string name="create_acc_string">Create account</string>
    <string name="private_string">Private</string>
    <string name="business_string">Business</string>
    <string name="verify_your_phone_title">VERIFY YOUR PHONE</string>
    <string name="security_code_sent_string">Security code send by SMS  please enter code</string>
    <string name="quantity_tries">1 from 3</string>
    <string name="verify_btn">Verify</string>
    <string name="stay_login_string">Stay log In</string>
    <string name="mailchatid_or_phone">Mailchat ID or Phone number</string>
    <string name="not_you"><u>Not you</u></string>
    <string name="forgot_pass"><u>Forgot passord</u>?</string>
    <string name="inbox_title">Inbox</string>
    <string name="search_string">Search</string>
    <string name="user_img">User img</string>
    <string name="create_new_message">Create new message</string>
    <string name="new_subj_hint">New subject:</string>
    <string name="input_msg">Message...</string>
    <string name="to_send_to">To:</string>
</resources>
