<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpBusiness"
    android:background="#F9FBFF">

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/okbtn"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxTerms"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:buttonTint="#A3AFC9"

        android:text="@string/terms"
        android:textColor="@color/grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTV" />

    <EditText
        android:inputType="textCapWords|textNoSuggestions|textPersonName"

        android:id="@+id/lastNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/last_name_tv"
        android:textColorHint="#CCD5E8"
        android:textColorLink="#CCD5E8"
        android:theme="@style/CustomEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTV">

    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginRight="10dp"
            android:text="@string/account_owner"
            android:textColor="#262626"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/confidentional"
            android:textColor="#262626"
            android:textSize="16sp"></TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/firstNameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/first_name_tv"
        android:inputType="textCapWords|textNoSuggestions|textPersonName"
        android:textColorHint="#CCD5E8"
        android:theme="@style/CustomEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

    </EditText>

    <EditText
        android:id="@+id/phoneTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/phone_number_tv"
        android:inputType="phone"
        android:maxEms="10"
        android:maxLength="10"
        android:textColorHighlight="#CCD5E8"
        android:textColorHint="#CCD5E8"
        android:textColorLink="#CCD5E8"
        android:theme="@style/CustomEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_nums"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTV">

    </EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="SIGN UP"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </TextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="CREATE A MAILCHAT ACCOUNT"
        android:textColor="#262626"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        android:shadowColor="#CCD5E8"
        android:text="@string/already_have_an_acc_string"
        android:textColor="#CCD5E8"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTerms"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:background="#F9FBFF"
        android:text="@string/log_in_underline"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/first_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_tv"
        android:textColor="#CCD5E8"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/firstNameTV"
        app:layout_constraintStart_toStartOf="@+id/firstNameTV" />

    <TextView
        android:id="@+id/last_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name_tv"
        android:textColor="#CCD5E8"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTV"
        app:layout_constraintStart_toStartOf="@+id/lastNameTV" />

    <TextView
        android:id="@+id/phone_number_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/phone_number_tv"
        android:textColor="#CCD5E8"
        android:textColorHint="#CCD5E8"
        android:textColorLink="#CCD5E8"
        app:layout_constraintBottom_toTopOf="@+id/phoneTV"
        app:layout_constraintEnd_toEndOf="@+id/phoneTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_nums"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneTV"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="29dp"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_text"
        app:layout_constraintBottom_toBottomOf="@+id/phoneTV"
        app:layout_constraintEnd_toEndOf="@+id/spinner_nums"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/spinner_nums"
        app:layout_constraintTop_toBottomOf="@+id/spinner_nums" />


</androidx.constraintlayout.widget.ConstraintLayout>
